# campus_placement_predictor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  ROADMAP.md  app.py  main.py  placement_model.pkl  pyproject.toml  req.txt  requirements.txt
data/: cleaned_placement_data.csv
